<resources>
    <string name="app_name">Homeify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="introduction_header_text">The Right Address\n For Shopping\n Any Day</string>
    <string name="introduction_body_text">it\'s very easy to reach the best \n quality among the products</string>
    <string name="start">Start</string>
    <string name="homify">Homify</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="are_u_have_account">Are U Have Account ?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_link_will_sent_for_you">Reset Password link Will sent for you ..</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="hometxt">Home</string>
    <string name="sports">Sports</string>
    <string name="furniture">Furniture</string>
    <string name="shoes">Shoes</string>
    <string name="accessories">Accessories</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="tab_home">Home</string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="your_cart_is_empty">your shopping cart is empty !</string>
    <string name="see_product">See product</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location:</string>
    <string name="street">Street</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="billing">Billing</string>
    <string name="payment_method">Payment Method</string>
    <string name="billing_payment_desc">My App does not support real payment method .. please pay when you receive your order</string>
    <string name="shopping_address">Shopping Address</string>
    <string name="place_order">Place Order</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="products">Products</string>
    <string name="track_order">Track Order</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_person_info">Edit Person Info</string>
    <string name="orders">Orders</string>
    <string name="billings">Billings</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="version">Homify 1.0</string>
    <string name="g_regional">Regional</string>
    <string name="food">Foods</string>
    <string name="g_chair">Home</string>
    <string name="confirm_order_message">Do You want to Confirm this Order ?</string>
    <string name="confirm_order_title">\"Confirm Order.. \"</string>
    <string name="g_order_placed">Ordered</string>
    <string name="g_confirm">Confirmed</string>
    <string name="g_shipped">Shipped</string>
    <string name="g_delivered">Delivered</string>
    <string name="yes">Yes</string>
    <string name="cancel_">Cancel</string>
    <string name="please_select_address">Please Select Address !</string>
    <string name="coffee">Coffee</string>
    <string name="product_added_successfully">Product Added Successfully .</string>
    <string name="dollar">EG</string>
    <string name="discounts_products">Discount Products</string>
    <string name="delete_item">\"Delete Item \"</string>
    <string name="are_u_want_to_delete">Do You want to delete Item From Your Cart ?</string>
    <string name="order_confirmed_successfully">\"Order Confirmed Successfully \"</string>
    <string name="g_arabic">اللغة العربية</string>
    <string name="g_english">English</string>
    <string name="g_search_now">Search Now</string>
    <string name="g_cancel">Cancel</string>
    <string name="item_not_found">No Item Found !</string>
</resources>