<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.RegisterFragment">


    <TextView
        android:id="@+id/registerTvHeader"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/registerTVLetsRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/marginTop32"
        android:gravity="center"
        android:letterSpacing=".05"
        android:lineSpacingExtra="10dp"
        android:text="@string/let_s_register"
        android:textColor="@color/black"
        android:textSize="@dimen/h3TextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTvHeader" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin12"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintTop_toBottomOf="@id/registerTVLetsRegister"
        >

        <TextView
            android:id="@+id/registerAreUHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/are_u_have_account"
            android:textSize="@dimen/h2TextSize"
             />

        <TextView
            android:id="@+id/registerTVLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/login"
            android:textColor="@color/orange_color"
            android:textSize="@dimen/h3TextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/registerAreUHaveAccount"
            app:layout_constraintStart_toEndOf="@id/registerAreUHaveAccount"
            app:layout_constraintTop_toTopOf="@id/registerAreUHaveAccount" />
    </LinearLayout>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registerGuideLineVertical1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registerGuideLineVertical2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".92" />

    <EditText
        android:id="@+id/registerEDFirstName"
        style="@style/editText"
        android:layout_marginHorizontal="@dimen/marginTop16"
        android:hint="@string/first_name"
        android:layout_marginTop="@dimen/marginTop32"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <EditText
        android:id="@+id/registerEDLastName"
        style="@style/editText"
        android:layout_marginHorizontal="@dimen/marginTop16"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintTop_toBottomOf="@id/registerEDFirstName" />

    <EditText
        android:id="@+id/registerEDEmail"
        style="@style/editText"
        android:layout_marginHorizontal="@dimen/marginTop16"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintTop_toBottomOf="@id/registerEDLastName" />

    <EditText
        android:id="@+id/registerEDPassword"
        style="@style/editText"
        android:layout_marginHorizontal="@dimen/marginTop16"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintTop_toBottomOf="@id/registerEDEmail" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/registerBtnRegister"
        style="@style/redButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/smallButtonHeight"
        android:layout_marginHorizontal="@dimen/marginTop16"
        android:layout_marginTop="@dimen/marginTop32"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintTop_toBottomOf="@id/registerEDPassword" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginTop16"
        android:layout_marginTop="@dimen/marginTop32"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/registerGuideLineVertical2"
        app:layout_constraintStart_toStartOf="@id/registerGuideLineVertical1"
        app:layout_constraintTop_toBottomOf="@id/registerBtnRegister">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtnGmail"
            style="@style/redButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_margin="@dimen/margin8"
            android:layout_weight="1"
            android:text="@string/gmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtnFacebook"
            style="@style/whiteButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_margin="@dimen/margin8"
            android:layout_weight="1"
            android:text="@string/facebook"

            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>








