<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin12"
    >


    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin12"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/h3TextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResetPassordDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_link_will_sent_for_you"
        android:textColor="@color/g_gray700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvResetPassordDesc"
        app:layout_constraintEnd_toEndOf="@id/tvResetPassordDesc"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassordDesc"
        android:layout_margin="@dimen/margin12"
        android:id="@+id/ETResetPassword"
        android:hint="@string/e_mail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelResetPassword"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        app:layout_constraintTop_toBottomOf="@id/ETResetPassword"
        app:layout_constraintStart_toStartOf="@id/tvResetPassordDesc"
        android:layout_marginTop="@dimen/margin12"
        style="@style/whiteButtonStyle"
        android:text="@string/cancel"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmResetPassword"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        app:layout_constraintTop_toBottomOf="@id/ETResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/marginTop16"
        android:layout_marginTop="@dimen/margin12"
        style="@style/redButtonStyle"
        android:text="@string/confirm"
        />


</androidx.constraintlayout.widget.ConstraintLayout>