<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.IntroductionFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/introduction_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/introduction_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/introduction_headerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop32"
        android:gravity="center"
        android:letterSpacing=".05"
        android:lineSpacingExtra="10dp"
        android:text="@string/introduction_header_text"
        android:textColor="@color/black"
        android:textSize="@dimen/h3TextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduction_image" />

    <TextView
        android:id="@+id/introduction_bodyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/introduction_body_text"
        android:textSize="@dimen/h2TextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduction_headerTxt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/introduction_btnStart"
        android:layout_width="@dimen/mediumButtonWidth"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/introduction_bodyTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/red_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSize24"
        />


</androidx.constraintlayout.widget.ConstraintLayout>











